particle.js updated to include z-index -1 to ensure its always as far back as possible!

--- a/web-scripting-1/project1/styles/styles.css
+++ b/web-scripting-1/project1/styles/styles.css
@@ -21,7 +21,6 @@ body {
 #canvas {
     cursor: pointer;
     box-shadow: 0 0 25px 25px rgb(255, 255, 255, .05);
-    z-index: 999;
 }
 #canvas:active {
     cursor: default;
